# experience-study-ai-copilot

./: .cursorrules  .gitignore  README.md  chat.py  main.py  pyproject.toml
agents/: __init__.py  agent_actuary.py  agent_analyst.py  agent_steward.py  model_config.py  openai_compat.py  orchestrator.py  schemas.py
core/: copilot_agent.py  session_state.py
data/: analysis_inforce.csv  sweep_summary.csv
data/input/: synthetic_inforce.csv
data/output/: analysis_inforce.csv  sweep_summary_1_gender_smoker_face_amount_risk_class_issue_age_band.csv
docs/: UAT_Checklist.md  UAT_Checklist_detailed.md  UAT_Checklist_manager.md  UAT_Checklist_willcheck.md  improvement-plan.md  stakeholder_presentation.html
skills/experience_study_skill/: native_tools.py  schemas.py  skill.md
tests/: test_agent_contracts.py  test_data_io.py  test_data_steward.py  test_insight_engine.py  test_main.py  test_model_config.py  test_orchestrator.py  test_runtime_extraction.py  test_schemas.py  test_unified_copilot.py  test_visualization.py
tests/fixtures/: dummy_inforce.csv
tools/: __init__.py  data_io.py  data_steward.py  insight_engine.py  visualization.py
