[project]
name = "experience-study-ai-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.16"
dependencies = [
    "git-filter-repo>=2.47.0",
    "openai>=2.28.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scipy>=1.13.1",
    "streamlit>=1.50.0",
]
